bazel_dep(name = "rules_foreign_cc", version = "0.0.0")
local_path_override(
    module_name = "rules_foreign_cc",
    path = "..",
)

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
tools.cmake(version = "3.23.1")
tools.ninja(version = "1.11.1")
use_repo(
    tools,
    "meson_src",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_swift", version = "1.17.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "3.4.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.24.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_perl", version = "0.2.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    # Only set when you have mulitple toolchain versions.
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

# https://bazelbuild.github.io/rules_rust/crate_universe_bzlmod.html
rust_example = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

inject_repo(rust_example, "rules_foreign_cc")

rust_example.annotation(
    # Setting build_script_data makes the files available on disk when the rule runs.
    build_script_data = ["@rules_foreign_cc//toolchains:current_cmake_toolchain"],
    build_script_env = {
        # The toolchain supplies a value of $(CMAKE) which is an execroot-relative path, so we need to prefix it with `$${pwd}/`
        # because build scripts don't typically run in the execroot unlike most bazel rules, for improved compatibility with Cargo.
        "CMAKE": "$${pwd}/$(CMAKE)",
    } | select({
        "@platforms//os:windows": {
            "CMAKE_GENERATOR": "Ninja",
        },
    }),
    # Setting build_script_toolchains makes makefile variable substitution work so that we can reference $(CNAME) in attributes.
    build_script_toolchains = ["@rules_foreign_cc//toolchains:current_cmake_toolchain"],
    crate = "libz-ng-sys",
)
rust_example.spec(
    package = "libz-ng-sys",
    version = "=1.1.20",
)
rust_example.from_specs(
    name = "rust_example",
)
use_repo(
    rust_example,
    "rust_example",
)

bazel_dep(name = "bazel_lib", version = "3.2.0")
