load("@bazel_lib//lib:diff_test.bzl", "diff_test")
load("@rules_shell//shell:sh_library.bzl", "sh_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/lint:linters.bzl", "shellcheck_test")
load(":cmake_text_tests.bzl", "cmake_script_test_suite")
load(":convert_shell_script_test.bzl", "shell_script_conversion_suite")
load(":set_file_prefix_map_test.bzl", "set_file_prefix_map_test_suite")
load(":shell_script_helper_test_rule.bzl", "shell_script_helper_test_rule")
load(":symlink_contents_to_dir_test_rule.bzl", "symlink_contents_to_dir_test_rule")
load(":utils_test.bzl", "utils_test_suite")

# gazelle:exclude

TOOL_TARGETS = [
    "//toolchains/private:cmake_tool",
    "//toolchains/private:make_tool",
    "//toolchains/private:meson_tool",
    "//toolchains/private:ninja_tool",
    "//toolchains/private:pkgconfig_tool",
]

filegroup(
    name = "build_scripts",
    testonly = True,
    srcs = TOOL_TARGETS,
    output_group = "script_file",
)

filegroup(
    name = "wrapper_scripts",
    testonly = True,
    srcs = TOOL_TARGETS,
    output_group = "wrapper_script_file",
)

sh_library(
    name = "tool_build_scripts",
    testonly = True,
    srcs = [
        ":build_scripts",
        ":wrapper_scripts",
    ],
    tags = ["lint-genfiles"],
)

shellcheck_test(
    name = "shellcheck",
    size = "small",
    srcs = [":tool_build_scripts"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cmake_script_test_suite()

shell_script_conversion_suite()

set_file_prefix_map_test_suite()

utils_test_suite()

shell_script_helper_test_rule(
    name = "shell_script_inner_fun",
    out = "inner_fun_text.txt",
    script = ["##symlink_contents_to_dir## $$SOURCE_DIR$$ $$TARGET_DIR$$ False"],
)

diff_test(
    name = "shell_script_inner_fun_test",
    file1 = ":shell_script_inner_fun",
    file2 = select({
        "@platforms//os:freebsd": "expected/inner_fun_text_freebsd.txt",
        "@platforms//os:macos": "expected/inner_fun_text_macos.txt",
        "@platforms//os:windows": "expected/inner_fun_text_windows.txt",
        "//conditions:default": "expected/inner_fun_text.txt",
    }),
)

filegroup(
    name = "dir1_fg",
    srcs = glob(["dir1/**"]),
)

filegroup(
    name = "dir2_fg",
    srcs = glob(["dir2/**"]),
)

symlink_contents_to_dir_test_rule(
    name = "symlink_dirs",
    out = "out_symlinked_dirs.txt",
    dir1 = ":dir1_fg",
    dir2 = ":dir2_fg",
)

diff_test(
    name = "shell_method_symlink_contents_to_dir_test",
    file1 = "expected/out_symlinked_dirs.txt",
    file2 = ":symlink_dirs",
)

sh_test(
    name = "output_validation_script_test",
    size = "small",
    srcs = ["assert_output_validation_script.sh"],
    args = ["$(locations //test/output_validation:wrong_output_in_action_check_script)"],
    data = ["//test/output_validation:wrong_output_in_action_check_script"],
)
