load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "hello_world",
    cmake_options = ["-GNinja"],
    lib_source = "@cmake_hello_world_variant_src//:all",
    out_binaries = select({
        "//:macos": ["CMakeHelloWorld"],
        "//:windows": ["CMakeHelloWorld.exe"],
        "//conditions:default": ["CMakeHelloWorld"],
    }),
)

filegroup(
    name = "binary",
    srcs = [":hello_world"],
    output_group = select({
        "//:macos": "CMakeHelloWorld",
        "//:windows": "CMakeHelloWorld.exe",
        "//conditions:default": "CMakeHelloWorld",
    }),
)

sh_test(
    name = "test_hello_world",
    srcs = ["test_hello_world.sh"],
    args = ["$(location :binary)"],
    data = [":binary"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
